# text-wrangler

./: text-wrangler.cabal
app/: Main.hs
src/Text/: Wrangler.hs
