name:                text-wrangler
version:             0.1.0.0
synopsis:            Text wrangling library
description:         Please see README.md
homepage:            http://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Polyanitsa
maintainer:          coffeecup.winner@gmail.com
copyright:           2016 Dmitry Polyanitsa
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Wrangler
  build-depends:       base      >= 4.7 && < 5
                     , filemanip >= 0.3 && < 0.4
                     , mtl       >= 2.2 && < 2.3
                     , text      >= 1.2 && < 1.3
  default-language:    Haskell2010

executable wrangler
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text-wrangler
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text-wrangler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple
